--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Surprise</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
     <canvas id="canvas"></canvas>
+    <a href="assets/html/slideshow.html" id="hidden-link"
+      >Let me take you back...</a
+    >
     <script src="assets/js/script.js"></script>
   </body>
 </html>
