Added more slideshow pictures. Finished

--- a/assets/html/slideshow.html
+++ b/assets/html/slideshow.html
@@ -22,25 +22,119 @@
   </head>
 
   <body>
-    <span id="message-id-1" class="message">Hi Love</span>
-    <span id="message-id-2" class="message">I love you so much</span>
-    <span id="message-id-3" class="message">Happy 6th anniversary!</span>
-    <span id="message-id-4" class="message">Naalalal mo paba to?</span>
-    <span id="message-id-5" class="message">Cute naten dito yaaaab!</span>
     <div class="container-carousel">
+      <span id="message-1" class="message"
+        >Hi.<br />
+        Move forward and never look back.</span
+      >
+      <span id="message-2" class="message"
+        >Happy 6th Anniversary Looove!<br />
+        Too cheesy ba? hahaha. I'm trying my best to express myself to you love
+        kahit satingin mo minsan na ne-neglect kita. Pasensya kana love eto lang
+        lang kaya ko maibigay sayo ngayon love ha? It's all my fault kung bakit
+        ka malungkot every year pag nag a-anniv tayo dahil hindi mo ko
+        kasama...</span
+      >
+      <span id="message-3" class="message"
+        >Alam ko love pagod kana sa ganitong set-up naten, na feeling mo paulit-
+        ulit nalang nangyayari saten parang walang pinagbago. And to make it
+        worst, parang may balat yata tayo sa pwet na every time na mag monthsary
+        tayo nag aaway tayo palagi.</span
+      >
+      <span id="message-4" class="message">Naalalal mo to Love?</span>
+      <span id="message-5" class="message"
+        >Grabe sobrang memorable tong araw nato no? Putek muntik na tayo talaga
+        dito 😢 kung alam mo lang kung gaano ko kinabahan non love. HAHAHA!
+      </span>
+      <span id="message-6" class="message"
+        >Eto love naalala mo to? Isa to sa mga hindi ko malilimutang experience
+        ng buhay ko. Bakit? Dahil, parang napaka bagal ng oras pala sa ilalim ng
+        dagat no? Ang sarap siguro mabuhay ng lumulutang kalang tapos at napaka
+        tahimik ng nasa paligid mo. At syempre, makakalimutan ba kita, isa nga
+        naman to sa pinaka masayang pangyayari sabuhay ko dahil naka holding
+        hands kita sa ilalim ng dagat. Ibang klase!</span
+      >
+      <span id="message-7" class="message"
+        >Dito naman tayo sa isa pang memorable na experience naten with my
+        family sobrang saya ko neto napapalagay na sayo yung family ko at
+        nakikilala mo sila at ikaw rin ng mabuti. Gwapo ko talaga syet
+        haha...</span
+      >
+      <span id="message-8" class="message"
+        >Isa pa to, swerte mo naman talaga saken!<br />
+        Pero syempre mas maswerte ako sayo hehehe. Cute naten dito love.. la
+        lang gusto ko lang i-mention...</span
+      >
+      <span id="message-9" class="message"
+        >Ayan na oh maganda ka dyan haaaa baka sabihin mo puro ako na lang gwapo
+        palageee para wala kang reklamo.</span
+      >
+      <span id="message-10" class="message"
+        >Pero gwapo talaga ko love wala kang magagawa... Haysss</span
+      >
+      <span id="message-11" class="message"
+        >Hay nakoo Love, tagal na naten nag lolokohan kelan mo ba kasi ako
+        papakasalan ha? Tagal tagal ko na nag hihintay hahaha.
+      </span>
+      <span id="message-12" class="message"
+        >Pero Love... kahit dinadaan ko nalang lahat sa biro, alam mo naman
+        mahal na mahal kita dba? Sa kabila ng lahat ng kalokohan at pag
+        papahirap ko sayo, hindi mo parin ako sinukuan Love. Ibang klase
+        ka...</span
+      >
+      <span id="message-13" class="message"
+        >Salamat sa lahat ng pag tatyaga mo saken at sa pag intindi sa napaka
+        difficult kong ugali. Alam ko love weird akong lalake at minsan mahirap
+        pakisamahan. Ikaw din naman eh ang hirap mong pakisamahan minsan satotoo
+        lang. Haha joke lang. Pero Love seryoso, thank you ha? Mahal na mahal na
+        mahal kita love. Etong nakaraang araw kaya ako sobrang busy dahil gusto
+        ko gawin man lang special tong araw nato Love dahil deserve mo na
+        ma-pamper ng sobra sa lahat hirap mo saken. Hintay pa ng konti love ha?
+        Please...</span
+      >
+      <span id="message-14" class="message"
+        >Siguro panahon na para maging tapat ako sayo Love. Ilang taon nadin
+        tayo nag papaligoy-ligoy sa isa't isa. Kilalang kilala na naten ang
+        isa't isa na parang kambal na hindi mapag hiwalay. Marami na tayo
+        napagdaanan at proud ako para saten sa mga nalagpasan nating problema.
+        At alam ko mas marami pa tayong tatahakin sa buhay, problemang
+        susulusyunan, at away na pagtatalunan, pero lahat ng yan hindi mahalaga
+        pag mag kasama tayo Love. Masaya ko at nakilala kita sabuhay ko...
+        Kaya...</span
+      >
+      <span id="message-15" class="message"
+        >Eto picture ko lagay mo sa wallet mo pampaswerte HAHAHAHHAHA.</span
+      >
+      <span id="message-16" class="message">Love...</span>
+      <span id="message-17" class="message"
+        >Will you please make me the happiest man and marry me 💍?</span
+      >
+
       <i id="prevBtn" class="fas fa-chevron-left"></i>
       <i id="nextBtn" class="fas fa-chevron-right"></i>
       <div class="carousel-slide">
-        <img id="last-clone" src="../img/img-carousel-5.JPG" alt="" />
-        <img src="../img/img-carousel-1.JPG" alt="" />
-        <img src="../img/img-carousel-2.JPG" alt="" />
-        <img src="../img/img-carousel-3.JPG" alt="" />
-        <img src="../img/img-carousel-4.JPG" alt="" />
-        <img src="../img/img-carousel-5.JPG" alt="" />
-        <img id="first-clone" src="../img/img-carousel-1.JPG" alt="" />
+        <img id="last-clone" src="../img/img-carousel-resized-17.JPG" alt="" />
+        <img src="../img/img-carousel-resized-1.JPG" alt="" />
+        <img src="../img/img-carousel-resized-2.JPG" alt="" />
+        <img src="../img/img-carousel-resized-3.JPG" alt="" />
+        <img src="../img/img-carousel-resized-4.JPG" alt="" />
+        <img src="../img/img-carousel-resized-5.JPG" alt="" />
+        <img src="../img/img-carousel-resized-6.JPG" alt="" />
+        <img src="../img/img-carousel-resized-7.JPG" alt="" />
+        <img src="../img/img-carousel-resized-8.JPG" alt="" />
+        <img src="../img/img-carousel-resized-9.JPG" alt="" />
+        <img src="../img/img-carousel-resized-10.JPG" alt="" />
+        <img src="../img/img-carousel-resized-11.JPG" alt="" />
+        <img src="../img/img-carousel-resized-12.JPG" alt="" />
+        <img src="../img/img-carousel-resized-13.gif" alt="" />
+        <img src="../img/img-carousel-resized-14.JPG" alt="" />
+        <img src="../img/img-carousel-resized-15.JPG" alt="" />
+        <img src="../img/img-carousel-resized-16.JPG" alt="" />
+        <img src="../img/img-carousel-resized-17.JPG" alt="" />
+        <img id="first-clone" src="../img/img-carousel-resized-1.JPG" alt="" />
       </div>
     </div>
-
-    <script src="../js/slideshow.js"></script>
   </body>
+  <!-- necessary to be after the body tag -->
+  <script src="../js/slideshow.js"></script>
 </html>
