--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <canvas id="canvas"></canvas>
     <a href="assets/html/slideshow.html" id="hidden-link"
-      >Let me take you back...</a
+      >You made it Love! What now?</a
     >
     <script src="assets/js/script.js"></script>
   </body>
