Minor html tweak

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <canvas id="canvas"></canvas>
     <a href="assets/html/slideshow.html" id="hidden-link"
-      >You made it Love! What now?</a
+      >Galing Ah. Click mo Love!</a
     >
     <script src="assets/js/script.js"></script>
   </body>
